--- a/meccsek.html
+++ b/meccsek.html
@@ -992,7 +992,7 @@ async function loadUserBetsFromServer() {
     if (typeof Clerk === 'undefined' || !Clerk.user) return;
     
     try {
-        const res = await fetch(`/api/user/get-bets?userId=${Clerk.user.id}`);
+        const res = await fetch(`/api/user/bets?userId=${Clerk.user.id}`);
         
         // --- HIBAKERESÉS KEZDETE ---
         const text = await res.text(); // Előbb szövegként olvassuk be
@@ -1127,6 +1127,7 @@ window.addEventListener('load', startApp);
     </script>
 </body>
 </html>
+
 
 
 
