--- a/meccsek.html
+++ b/meccsek.html
@@ -554,16 +554,16 @@ async function renderMatches() {
                 : new Date(m.utcDate).toLocaleTimeString('hu-HU',{hour:'2-digit',minute:'2-digit'});
 
             const odds = typeof getSmartOdds === 'function' ? getSmartOdds(m) : {h:1.50, d:3.20, a:2.40};
-            
-            const myBet = currentUserBets.find(b => String(b.match_id || b.matchId) === String(m.id));
-            const isFlashing = typeof flashingMatches !== 'undefined' && flashingMatches.has(String(m.id)) ? 'goal-highlight' : '';
 
-            // Státusz egységesítése nagybetűre (WON, LOST, OPEN)
-            const myBet = currentUserBets.find(b => String(b.match_id || b.matchId) === String(m.id));
+// CSAK EGYSZER deklaráljuk!
+const myBet = currentUserBets.find(b => String(b.match_id || b.matchId) === String(m.id));
 
-            if (String(m.id) === '537065') {
-    console.log("Fiorentina bet adatok:", myBet);}
-            const bStatus = myBet ? String(myBet.status).toUpperCase() : null;
+// A log maradhat, de a 'const myBet' deklaráció már nem kell elé!
+if (String(m.id) === '537065') {
+    console.log("Fiorentina bet adatok:", myBet);
+}
+
+const bStatus = myBet ? String(myBet.status).toUpperCase() : null;
             
             return `
             <div class="match-card ${isFlashing}" id="match-${m.id}" style="display: flex; flex-direction: column; align-items: center; padding: 15px; margin-bottom: 12px; position: relative; background: rgba(255,255,255,0.03); border-radius: 12px; transition: all 0.3s ease;">
@@ -1149,6 +1149,7 @@ window.addEventListener('load', startApp);
     </script>
 </body>
 </html>
+
 
 
 
