--- a/meccsek.html
+++ b/meccsek.html
@@ -138,10 +138,15 @@
 
         .mobile-nav { position: fixed; bottom: 0; left: 0; right: 0; height: 70px; background: var(--glass); display: none; justify-content: space-around; align-items: center; z-index: 1100; border-top: 1px solid var(--border); backdrop-filter: blur(20px); }
         @media (max-width: 1100px) {
+            .main-content, #matches-list, .content {
+        padding-bottom: 100px !important; /* A 70px magas menü + 30px biztonsági sáv */
+    }
             .sidebar, .standings-sidebar { position: fixed; top: 75px; bottom: 75px; width: 85%; z-index: 1050; transform: translateX(-105%); background: var(--bg); }
             .standings-sidebar { right: 0; transform: translateX(105%); }
             .sidebar.open, .standings-sidebar.open { transform: translateX(0); }
             .mobile-nav { display: flex; }
+    .sidebar, .standings-sidebar { bottom: 70px; }
+}
         }
 @keyframes goal-flash {
     0% { background-color: rgba(255, 62, 62, 0.95); transform: scale(1.02); }
@@ -1149,6 +1154,7 @@ window.addEventListener('load', startApp);
     </script>
 </body>
 </html>
+
 
 
 
