--- a/meccsek.html
+++ b/meccsek.html
@@ -137,8 +137,7 @@
         .date-pill.is-today { border-color: var(--neon-blue); color: var(--neon-blue); border-width: 2px; }
 
          .mobile-nav { position: fixed; bottom: 0; left: 0; right: 0; height: 70px; background: var(--glass); display: none; justify-content: space-around; align-items: center; z-index: 1100; border-top: 1px solid var(--border); backdrop-filter: blur(20px); }
-        @media (max-width: 1100px) { #matches-list, .matches-container { 
-        padding-bottom: 100px !important;}
+        @media (max-width: 1100px) {
             .sidebar, .standings-sidebar { position: fixed; top: 75px; bottom: 70px; width: 85%; z-index: 1050; transform: translateX(-105%); background: var(--bg); }
             .standings-sidebar { right: 0; transform: translateX(105%); }
             .sidebar.open, .standings-sidebar.open { transform: translateX(0); }
